# SPTools

./: .gitignore  pom.xml
.github/workflows/: maven.yml
c++/: CMakeLists.txt  README.md  TRANSACTION_SERVER_README.md  server.cpp  server.py  transaction_server.py
src/main/java/cn/ymjacky/: SPMinigamesPlugin.java  SPToolsPlugin.java
src/main/java/cn/ymjacky/command/: BossBarRemoveCommand.java  ConfirmCommand.java  InsuranceCommand.java  LeaveQueueCommand.java  QueueCommand.java  StillnessCommand.java
src/main/java/cn/ymjacky/config/: ConfigurationManager.java  QueueConfig.java
src/main/java/cn/ymjacky/database/: MySQLManager.java
src/main/java/cn/ymjacky/gui/: BackupGUI.java  InsuranceGUI.java  InsurancePurchaseGUI.java
src/main/java/cn/ymjacky/insurance/: InsurancePlugin.java
src/main/java/cn/ymjacky/listener/: PlayerConnectionListener.java  PlayerDeathListener.java  PlayerJoinQuitMessageListener.java  PlayerKeyboardMenuListener.java
src/main/java/cn/ymjacky/manager/: BackupManager.java  ConfigurationManager.java  EconomyManager.java  InsuranceManager.java  StillnessManager.java
src/main/java/cn/ymjacky/queue/: GameQueue.java  QueueGroup.java  QueueManager.java  QueuePlayer.java
src/main/java/cn/ymjacky/stats/: DatabaseManager.java  PlayerStats.java  RedisManager.java  SQLiteShardingManager.java  StatsManager.java
src/main/java/cn/ymjacky/task/: QueueScheduler.java  StillnessCheckTask.java
src/main/java/cn/ymjacky/transaction/: TransactionMonitor.java  TransactionRecord.java  (+1 more)
src/main/resources/: config.yml  insurance.yml  plugin.yml
(+21 files in other folders)
